Issue #1 fix:css alignment issue fixed in profile page

--- a/app/private/styles/views/profileView.less
+++ b/app/private/styles/views/profileView.less
@@ -115,4 +115,6 @@
 .profile-des .item .right.floated.content {
   width: 50% !important;
   text-align: right !important;
+  word-break: break-all !important;
+
 }
