--- a/app/public/styles/main.css
+++ b/app/public/styles/main.css
@@ -1921,6 +1921,7 @@ ul.fancytree-container li {
 .profile-des .item .right.floated.content {
   width: 50% !important;
   text-align: right !important;
+  word-break: break-all !important;
 }
 .workspaceicon.ui.header > .icon {
   padding-top: 0;
